# zombie-pirates

./: .gitignore  .gitmodules  CMakeLists.txt
PirateGame/include/: Cannon.h  Cannonball.h  Crew.h  CrewMember.h  Explosion.h  GameEngine.h  IntroText.h  Outro.h  PirateGame.h  Pos2D.h  Ship.h  ShipDamage.h  ShipFire.h  Shipfight.h  Sprite2D.h  TGALoader.h  Tentacles.h  TextCreator.h  Water.h  Wave.h
PirateGame/res/: bang1.tga  cannon.frag  cannon.tga  cannonball.tga  explosion.frag  explosion.tga  head.tga  lefttentacle.tga  littleFire1.tga  map.tga  mediumFire.tga  philipp.tga  pirateship.tga  rightfattentacle.tga  ship.frag  textured_rgba.frag  water.vert  water_outro.frag
PirateGame/src/: Cannon.cpp  Cannonball.cpp  Crew.cpp  CrewMember.cpp  Explosion.cpp  GameEngine.cpp  IntroText.cpp  Outro.cpp  PirateGame.cpp  Pos2D.cpp  Ship.cpp  ShipDamage.cpp  ShipFire.cpp  Shipfight.cpp  Sprite2D.cpp  TGALoader.cpp  Tentacle.cpp  Tentacle.h  Tentacles.cpp  TextCreator.cpp  Water.cpp  main.cpp
android_temp/AndroidInterface/: CMakeLists.txt
android_temp/AndroidInterface/include/: SceneViewerBundle.h
android_temp/AndroidInterface/src/: AndroidNativeInterface.cpp  RendererBundle.cpp  SceneViewerBundle.cpp  TriangleRenderer.cpp
android_temp/RamsesAndroidModule/: build.gradle
android_temp/RamsesAndroidModule/src/main/: AndroidManifest.xml
android_temp/RamsesAndroidModule/src/main/java/de/bmw/ramses/: RamsesNode.java  RamsesRenderer.java  RamsesSceneViewer.java  RamsesTriangleRenderer.java  UniformInput.java
android_temp/RamsesAndroidModule/src/main/res/values/: strings.xml
androidproject/app/: CMakeLists.txt  build.gradle
androidproject/app/src/main/: AndroidManifest.xml
androidproject/app/src/main/assets/res/: bang2.tga  cannon.vert  carol.tga  explosion.vert  fadeout.frag  goodguy.tga  guardship.tga  johnny.tga  littleFire2.tga  marko.tga  max.tga  omgOmgOmg.tga  rightslimtentacle.tga  tentacle.frag  textEffect.frag  textEffect.vert  textured_rgba_with_fade.frag  water.frag
androidproject/app/src/main/cpp/: AndroidNativeInterface.cpp  CMakeLists.txt  JNI_Interface.cpp  NativeGameLifecycle.cpp  NativeGameLifecycle.h  RendererBundle.cpp  RendererBundle.h  TriangleRenderer.cpp  TriangleRenderer.h  UniformInputWrapper.cpp  UniformInputWrapper.h  gles3jni.cpp
androidproject/app/src/main/cpp/DisplayManager/: ConfirmationEcho.h  DisplayManager.h  HideScene.h  LinkData.h  ShowSceneOnDisplay.h  UnmapScene.h  UnsubscribeScene.h
androidproject/app/src/main/java/de/bmw/ramsestrianglerenderer/: MainActivity.java
androidproject/app/src/main/java/de/zombiepirates/: GameActivity.java  GameRenderer.java
androidproject/app/src/main/java/java/de/bmw/ramses/: RamsesTriangleRenderer.java  ResourceHelper.java
androidproject/app/src/main/res/values/: strings.xml
androidproject/gradle/wrapper/: gradle-wrapper.properties
